[gd_scene load_steps=23 format=3 uid="uid://clusvcykg8ij7"]

[ext_resource type="Texture2D" uid="uid://dvpbaxv46n2vu" path="res://icon.svg" id="1_o5qli"]
[ext_resource type="Script" uid="uid://dtio4dxj76h2r" path="res://scripts/menu.gd" id="1_tipki"]
[ext_resource type="Script" uid="uid://wips4ihld4t3" path="res://scripts/robot_line.gd" id="2_choun"]
[ext_resource type="Script" uid="uid://wf226b3cm00o" path="res://scripts/room_manager.gd" id="4_tbgi4"]
[ext_resource type="Texture2D" uid="uid://rp6vsrce43wm" path="res://assets/Room_Builder_free_16x16.png" id="5_trceg"]
[ext_resource type="PackedScene" uid="uid://b4uksjxpc2q6w" path="res://scenes/clicker_manager.tscn" id="8_tipki"]
[ext_resource type="Script" uid="uid://cx0l7tt44ltp0" path="res://scripts/race_camera.gd" id="12_eb6dy"]
[ext_resource type="Script" uid="uid://b1vedp6xit418" path="res://scripts/robot_generator.gd" id="13_trceg"]

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_choun"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a8y0u"]
texture = ExtResource("5_trceg")
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
12:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
11:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
14:5/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
14:5/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
15:5/0 = 0
15:5/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
15:5/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
16:5/0 = 0
16:5/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
16:5/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
14:6/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
14:6/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
15:6/0 = 0
15:6/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
15:6/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
16:6/0 = 0
16:6/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
16:6/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
14:7/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
14:7/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
15:7/0 = 0
15:7/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
15:7/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
16:7/0 = 0
16:7/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
16:7/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
14:8/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
14:8/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
15:8/0 = 0
15:8/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
15:8/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
16:8/0 = 0
16:8/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
16:8/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
14:9/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
14:9/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
15:9/0 = 0
15:9/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
15:9/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
16:9/0 = 0
16:9/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
16:9/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
14:10/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
14:10/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
15:10/0 = 0
15:10/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
15:10/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
16:10/0 = 0
16:10/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
16:10/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
14:11/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
14:11/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
15:11/0 = 0
15:11/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
15:11/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
16:11/0 = 0
16:11/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
16:11/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
14:12/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
14:12/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
15:12/0 = 0
15:12/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
15:12/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
16:12/0 = 0
16:12/0/modulate = Color(0.593134, 0.593134, 0.593134, 1)
16:12/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_choun")
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0

[sub_resource type="TileSet" id="TileSet_tefeu"]
uv_clipping = true
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 16
sources/5 = SubResource("TileSetAtlasSource_a8y0u")

[sub_resource type="Gradient" id="Gradient_choun"]
offsets = PackedFloat32Array(0.831461, 1)
colors = PackedColorArray(1, 1, 0.0784314, 1, 1, 1, 1, 1)

[sub_resource type="Gradient" id="Gradient_ya4ey"]
offsets = PackedFloat32Array(0.867977, 1)
colors = PackedColorArray(0.858824, 0.223529, 0.85098, 1, 1, 1, 1, 1)

[sub_resource type="Gradient" id="Gradient_a8y0u"]
offsets = PackedFloat32Array(0.913979, 1)
colors = PackedColorArray(0.0678597, 0.568464, 0.492829, 1, 1, 1, 1, 1)

[sub_resource type="Gradient" id="Gradient_tipki"]
offsets = PackedFloat32Array(0.913979, 1)
colors = PackedColorArray(0.635751, 0.192465, 0.039866, 1, 1, 1, 1, 1)

[sub_resource type="Gradient" id="Gradient_85g3d"]
offsets = PackedFloat32Array(0.913979, 1)
colors = PackedColorArray(0, 0.606883, 0.195609, 1, 1, 1, 1, 1)

[sub_resource type="Gradient" id="Gradient_eb6dy"]
offsets = PackedFloat32Array(0, 0.711111)
colors = PackedColorArray(0.980556, 0.980556, 0.980556, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_trceg"]
gradient = SubResource("Gradient_eb6dy")
width = 150
height = 150
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Gradient" id="Gradient_trceg"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a8y0u"]
gradient = SubResource("Gradient_trceg")
width = 150
height = 150
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.901709, 0.166667)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sugp2"]
texture = ExtResource("1_o5qli")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:7/0 = 0
0:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:7/0 = 0
1:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:7/0 = 0
2:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:7/0 = 0
3:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:7/0 = 0
5:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:7/0 = 0
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_jyhfs"]
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 16
sources/0 = SubResource("TileSetAtlasSource_sugp2")

[node name="Main" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tipki")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.729
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -16.904
offset_right = 119.0
offset_bottom = 72.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.585, 0.585)
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VerticalCon" type="VBoxContainer" parent="CanvasLayer/Menu/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HideButton" type="Button" parent="CanvasLayer/Menu/MarginContainer/VerticalCon"]
custom_minimum_size = Vector2(28.375, 25)
layout_mode = 2
size_flags_horizontal = 8
text = "Hide"

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Menu/MarginContainer/VerticalCon"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer"]
layout_mode = 2
text = "MAZE"

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Menu/MarginContainer/VerticalCon"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "Size x"

[node name="Xedit" type="SpinBox" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 9.0
value = 9.0
alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Menu/MarginContainer/VerticalCon"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer3/HBoxContainer"]
layout_mode = 2
text = "Size y"

[node name="Yedit" type="SpinBox" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer3/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 5.0
value = 5.0
alignment = 1

[node name="MarginContainer7" type="MarginContainer" parent="CanvasLayer/Menu/MarginContainer/VerticalCon"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer7"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer7/HBoxContainer"]
layout_mode = 2
text = "%Remove"

[node name="RemoveWall" type="SpinBox" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer7/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 1.0
step = 0.01
alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="CanvasLayer/Menu/MarginContainer/VerticalCon"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer4"]
layout_mode = 2
text = "ROBOTS"

[node name="MarginContainer5" type="MarginContainer" parent="CanvasLayer/Menu/MarginContainer/VerticalCon"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer5"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer5/HBoxContainer"]
layout_mode = 2
text = "Speed"

[node name="SpeedEdit" type="SpinBox" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer5/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 5000.0
value = 600.0
alignment = 1

[node name="MarginContainer6" type="MarginContainer" parent="CanvasLayer/Menu/MarginContainer/VerticalCon"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer6"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer6/HBoxContainer"]
layout_mode = 2
text = "Offset"

[node name="OffsetEdit" type="SpinBox" parent="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer6/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 16.0
value = 5.0
alignment = 1

[node name="RoomGenerator" type="RoomGenerator" parent="."]
tile_map = NodePath("../TileMapLayer2")
room_size_x = 4
room_size_y = 4
room_quantity_x = 36
room_quantity_y = 20
percent_remove_existent = 0.08
remove_entire_wall = true

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_tefeu")

[node name="RobotFillLine" type="Line2D" parent="." node_paths=PackedStringArray("robot")]
default_color = Color(0.871542, 0.933428, 0, 1)
gradient = SubResource("Gradient_choun")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 3.66
antialiased = true
script = ExtResource("2_choun")
robot = NodePath("../RobotFill")

[node name="RobotTremauxLine" type="Line2D" parent="." node_paths=PackedStringArray("robot")]
width = 8.0
default_color = Color(0.859211, 0.223844, 0.850981, 1)
gradient = SubResource("Gradient_ya4ey")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true
script = ExtResource("2_choun")
robot = NodePath("../RobotTremaux")

[node name="RobotRandomLine" type="Line2D" parent="." node_paths=PackedStringArray("robot")]
width = 6.0
default_color = Color(0.0542679, 0.619459, 0.48736, 1)
gradient = SubResource("Gradient_a8y0u")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true
script = ExtResource("2_choun")
robot = NodePath("../RobotRandom")

[node name="RobotDFSLine" type="Line2D" parent="." node_paths=PackedStringArray("robot")]
width = 6.0
gradient = SubResource("Gradient_tipki")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true
script = ExtResource("2_choun")
robot = NodePath("../RobotDFS")

[node name="RobotWallLine" type="Line2D" parent="." node_paths=PackedStringArray("robot")]
width = 6.0
gradient = SubResource("Gradient_85g3d")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true
script = ExtResource("2_choun")
robot = NodePath("../RobotWall")

[node name="RaceCamera" type="Camera2D" parent="." node_paths=PackedStringArray("room_gen")]
script = ExtResource("12_eb6dy")
room_gen = NodePath("../RoomGenerator")

[node name="RobotWall" type="RobotWall" parent="." groups=["robot"]]
room_gen_path = NodePath("../RoomGenerator")

[node name="PointLight2D2" type="PointLight2D" parent="RobotWall"]
color = Color(0, 1, 0, 1)
energy = 2.35
shadow_enabled = true
texture = SubResource("GradientTexture2D_trceg")

[node name="RobotFill" type="RobotFill" parent="." groups=["robot"]]
room_gen_path = NodePath("../RoomGenerator")
speed = 0.0

[node name="PointLight2D" type="PointLight2D" parent="RobotFill"]
color = Color(0.916139, 0.802154, 0, 1)
energy = 2.35
shadow_enabled = true
texture = SubResource("GradientTexture2D_trceg")

[node name="RobotTremaux" type="RobotTremaux" parent="." groups=["robot"]]
room_gen_path = NodePath("../RoomGenerator")
speed = 0.0

[node name="PointLight2D2" type="PointLight2D" parent="RobotTremaux"]
color = Color(0.928168, 1.36691e-05, 0.613909, 1)
energy = 1.25
shadow_enabled = true
texture = SubResource("GradientTexture2D_trceg")

[node name="RobotRandom" type="RobotRandom" parent="." groups=["robot"]]
room_gen_path = NodePath("../RoomGenerator")
speed = 0.0

[node name="PointLight2D3" type="PointLight2D" parent="RobotRandom"]
color = Color(1.41986e-06, 0.430646, 0.357098, 1)
energy = 4.5
shadow_enabled = true
texture = SubResource("GradientTexture2D_a8y0u")

[node name="RobotDFS" type="RobotDFS" parent="." groups=["robot"]]
room_gen_path = NodePath("../RoomGenerator")

[node name="PointLight2D4" type="PointLight2D" parent="RobotDFS"]
color = Color(0.539088, 0.130509, 0.0277602, 1)
energy = 4.5
shadow_enabled = true
texture = SubResource("GradientTexture2D_a8y0u")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_jyhfs")

[node name="RoomManager" type="Node2D" parent="." node_paths=PackedStringArray("room_gen")]
script = ExtResource("4_tbgi4")
room_gen = NodePath("../RoomGenerator")
create_camera = false

[node name="ClickerManager" parent="." instance=ExtResource("8_tipki")]

[node name="RobotGenerator" type="Node2D" parent="."]
script = ExtResource("13_trceg")
bot_quantity = 1000
time_to_spawn = 0.02
robot_speed = 1000.0

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="."]
energy = 0.15
blend_mode = 1

[connection signal="pressed" from="CanvasLayer/Menu/MarginContainer/VerticalCon/HideButton" to="CanvasLayer/Menu" method="_on_hide_button_pressed"]
[connection signal="value_changed" from="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer2/HBoxContainer/Xedit" to="CanvasLayer/Menu" method="_on_xedit_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer3/HBoxContainer/Yedit" to="CanvasLayer/Menu" method="_on_yedit_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer7/HBoxContainer/RemoveWall" to="CanvasLayer/Menu" method="_on_remove_wall_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer5/HBoxContainer/SpeedEdit" to="CanvasLayer/Menu" method="_on_speed_edit_value_changed"]
[connection signal="value_changed" from="CanvasLayer/Menu/MarginContainer/VerticalCon/MarginContainer6/HBoxContainer/OffsetEdit" to="CanvasLayer/Menu" method="_on_offset_edit_value_changed"]
